[project]
name = "dayone-to-notes"
version = "0.1.0"
description = "Import Day One journal entries into Apple Notes"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich>=13.0.0",
    "markdown>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
dayone-import = "dayone_import:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "dayone_import.py",
    "README.md",
]
